--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,6 +14,7 @@ html {
 body {
   min-height: 100vh;
   width: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 input,
